# QtTemplate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  longpath.manifest
forms/: mainwindow.ui
scripts/: install.cmd  install.ps1  install.sh
src/: main.cpp
